--- a/chocopoo.html
+++ b/chocopoo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mfdesign: portfolio</title>
+    <title>mfdesign: chocopoo</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -16,33 +16,38 @@
     </header>
 
     <nav>
-      <ul>
+     <ul>
         <li><a href="index.html">about</a></li>
         <li><a href="portfolio.html">portfolio</a></li>
         <li><a href="contact.html">contact</a></li>
-    </ul>
-  </nav>
+     </ul>
+    </nav>
 
     <main class="portfolio">
-      <h2>Past Works</h2>
+        <h2>Chocopoo Packaging and Ads</h2>
 
-    <div class="pf-grid">
-      <div class="pf-item">
-        <a href="chocopoo.html" class="square"><img src="images/Chocopoo-Logo-black.svg" alt="Chocopoo Logo"></a>
-        <p class="pf-caption">Chocopoo Branding</p>
+      <div class="pf-example">
+        <img src="images/PF_CP-package.png" alt="Chocopoo Packaging Design">
+        <img src="images/PF_CP-billboard.jpg" alt="Chocopoo Billboard Ad">
+        <img src="images/PF_CP-poster.jpg" alt="Chocopoo Poster Ad">
       </div>
+        
+      <div class="text-columns">
 
-      <div class="pf-item">
-        <a href="greypoupon.html" class="square"><img src="images/Grey_Poupon.webp" alt="Grey Poupon Logo"></a>
-        <p class="pf-caption">Grey Poupon Ad Campaign</p>
-      </div>
+        <div class="column">
+          <h3>Chocopoo Chocolate-Covered Nuts</h3>
+          <p>This is a branding and packaging design for a box of chocolates. It also includes out-of-home advertisements.</p>
+        </div>
 
-      <div class="pf-item"> 
-        <a href="brringbrring.html" class="square"><img src="images/Logo-main.svg" alt="Brring!Brring! Logo"></a>
-        <a class="pf-caption">Brring! Brring! Bikes Branding</a>
+        <div class="column">
+          <h3>Details</h3>
+          <p><strong>Client:</strong> Maomi Corporation</p>
+          <p><strong>Year:</strong> 2025</p>
+          <p><strong>Sector:</strong> Food & Beverage</p>
+          <p><strong>Responsibilities:</strong> Logo, Brand Guidelines, Advertisements, Packaging</p>
+        </div>
+
       </div>
-    </div>
-      
    
     </main>
 
