--- a/greypoupon.html
+++ b/greypoupon.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mfdesign: portfolio</title>
+    <title>mfdesign: grey poupon</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -20,29 +20,34 @@
         <li><a href="index.html">about</a></li>
         <li><a href="portfolio.html">portfolio</a></li>
         <li><a href="contact.html">contact</a></li>
-    </ul>
-  </nav>
+      </ul>
+    </nav>
 
     <main class="portfolio">
-      <h2>Past Works</h2>
+      <h2>Grey Poupon Ad Campaign</h2>
 
-    <div class="pf-grid">
-      <div class="pf-item">
-        <a href="chocopoo.html" class="square"><img src="images/Chocopoo-Logo-black.svg" alt="Chocopoo Logo"></a>
-        <p class="pf-caption">Chocopoo Branding</p>
-      </div>
-
-      <div class="pf-item">
-        <a href="greypoupon.html" class="square"><img src="images/Grey_Poupon.webp" alt="Grey Poupon Logo"></a>
-        <p class="pf-caption">Grey Poupon Ad Campaign</p>
-      </div>
-
-      <div class="pf-item"> 
-        <a href="brringbrring.html" class="square"><img src="images/Logo-main.svg" alt="Brring!Brring! Logo"></a>
-        <a class="pf-caption">Brring! Brring! Bikes Branding</a>
-      </div>
+    <div class="pf-example">
+      <img src="images/PF_GP-poster-train.jpg" alt="Grey Poupon Train Ad">
+      <img src="images/PF_GP-poster-mall.jpg" alt="Grey Poupon Mall Ad">
+      <img src="images/PF_GP-billboard.jpg" alt="Grey Poupon Billboard Ad">
     </div>
       
+    <div class="text-columns">
+
+      <div class="column">
+        <h3>Grey Poupon Dijon Mustard</h3>
+        <p>This is a branding and packaging design for the premium dijon mustard brand, Grey Poupon. It also includes out-of-home advertisements.</p>
+      </div>
+
+      <div class="column">
+        <h3>Details</h3>
+        <p><strong>Client:</strong> Heinz US</p>
+        <p><strong>Year:</strong> 2025</p>
+        <p><strong>Sector:</strong> Food & Beverage</p>
+        <p><strong>Responsibilities:</strong> Advertisements</p>
+      </div>
+
+    </div>
    
     </main>
 
