--- a/index.html
+++ b/index.html
@@ -3,52 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Name - Designer in Toronto</title>
+    <title>mfdesign: about</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link href="styles/main.css" rel="stylesheet">
 </head>
 <body>
   <div class="container">
     <header>
-      <h1>Header</h1>
+      <img src="images/mfd-logo.svg" alt="MFDesign Logo" style="width:75px;height:75px;">
     </header>
 
     <nav>
       <ul>
-       <li><a href="index.html">home</a></li>
-        <li><a href="about.html">about</a></li>
+        <li><a href="index.html">about</a></li>
         <li><a href="portfolio.html">portfolio</a></li>
         <li><a href="contact.html">contact</a></li>
-    </ul>
-  </nav>
+      </ul>
+    </nav>
 
    
     <main>
-      <h1>Hey!</h1>
+      <h1>Mitchell Fernando</h1>
 
-      <!-- <ul>
-        <li>item</li>
-        ....<li>item</li>
-        <li>item</li>
-      </ul> -->
-
-      <p>Lorem ipsum dolor sit amet consectetur <a href="#">click me</a> elit. Nesciunt corrupti rerum praesentium voluptate, eveniet, veniam sit saepe ea facilis, natus perferendis sint quos. Autem adipisci temporibus repellat laudantium incidunt iste.</p>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt corrupti rerum praesentium voluptate, eveniet, veniam sit saepe ea facilis, natus perferendis sint quos. Autem adipisci temporibus repellat laudantium incidunt iste.</p>
-      <h2>Subheading</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt corrupti rerum praesentium voluptate, eveniet, veniam sit saepe ea facilis, natus perferendis sint quos. Autem adipisci temporibus repellat laudantium incidunt iste.</p>
+      <p class="paragraph-index">
+        Multi-disciplinary Designer.
+        I work with clients to build systems and memorable experiences.
+        With a background in Communication Studies, Linguistics, and Japanese Studies, I am interested in how language and culture interact to influence our understanding of the world.</p>
+      <p class="paragraph-index">
+        Also, as a former teacher, I like to approach design in ways that turn ideas to experiences that people can easily interact with, understand, and most importantly enjoy. 
+      </p>
+   
     </main>
 
 
      <aside>
-      <h1>Sidebar1</h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt corrupti rerum praesentium voluptate, eveniet, veniam sit saepe ea facilis, natus perferendis sint quos. Autem adipisci temporibus repellat laudantium incidunt iste.</p>
+      <img src="images/MCR60212.jpg" alt="My Portrait">
      </aside>
 
     <footer>
-      <p>&copy; Copyright 2025 - Your Name. All Rights Reserved.</p>
+      <p>&copy; Copyright 2025 - Mitchell Fernando. All Rights Reserved.</p>
     </footer>
-  </div> <!-- end container div -->
+  </div> 
 </body>
 </html>
