--- a/contact.html
+++ b/contact.html
@@ -3,52 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Name - Designer in Toronto</title>
+    <title>mfdesign: contact</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link href="styles/main.css" rel="stylesheet">
 </head>
 <body>
   <div class="container">
     <header>
-      <h1>Header</h1>
+      <img src="images/mfd-logo.svg" alt="MFDesign Logo" style="width:75px;height:75px;">
     </header>
 
     <nav>
       <ul>
-       <li><a href="index.html">home</a></li>
-        <li><a href="about.html">about</a></li>
+        <li><a href="index.html">about</a></li>
         <li><a href="portfolio.html">portfolio</a></li>
         <li><a href="contact.html">contact</a></li>
-    </ul>
-  </nav>
+      </ul>
+    </nav>
 
    
-    <main>
-      <h1>Contact</h1>
+    <main class="contact">
+      <h2>Contact</h2>
 
-      <!-- <ul>
-        <li>item</li>
-        ....<li>item</li>
-        <li>item</li>
-      </ul> -->
+      <p class="paragraph-contact">
+        <strong>MF Design</strong>
+        <br>
+        <strong>TEL:</strong> 905-677-6767
+        <br>
+        <strong>General Enquiries:</strong><span class="underline"> &#64;general@mfdesign.ca</span>
+        <br>
+        <strong>Design Collaboration Enquiries:</strong><span class="underline"> &#64;sales@mfdesign.ca</span>
+        <br>
+        <strong>Press & Image Enquiries:</strong><span class="underline"> &#64;press@mfdesign.ca </span>
+      </p>
+   
+      
+      <div class="social-links">
 
-      <p>Lorem ipsum dolor sit amet consectetur <a href="#">click me</a> elit. Nesciunt corrupti rerum praesentium voluptate, eveniet, veniam sit saepe ea facilis, natus perferendis sint quos. Autem adipisci temporibus repellat laudantium incidunt iste.</p>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt corrupti rerum praesentium voluptate, eveniet, veniam sit saepe ea facilis, natus perferendis sint quos. Autem adipisci temporibus repellat laudantium incidunt iste.</p>
-      <h2>Subheading</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt corrupti rerum praesentium voluptate, eveniet, veniam sit saepe ea facilis, natus perferendis sint quos. Autem adipisci temporibus repellat laudantium incidunt iste.</p>
+        <a href="https://www.instagram.com">
+          <img src="images/Instagram.svg" alt="Instagram Link">
+        </a>
+        <a href="https://www.x.com">
+          <img src="images/Twitter.svg" alt="Twitter Link">
+        </a>
+        <a href="https://www.facebook.com">
+          <img src="images/Facebook.svg" alt="Facebook Link">
+        </a>
+        <a href="https://www.youtube.com">
+          <img src="images/Youtube.svg" alt="YouTube Link">
+        </a>
+      </div>
+
+
     </main>
 
 
-     <aside>
-      <h1>Sidebar1</h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt corrupti rerum praesentium voluptate, eveniet, veniam sit saepe ea facilis, natus perferendis sint quos. Autem adipisci temporibus repellat laudantium incidunt iste.</p>
-     </aside>
-
     <footer>
-      <p>&copy; Copyright 2025 - Your Name. All Rights Reserved.</p>
+      <p>&copy; Copyright 2025 - Mitchell Fernando. All Rights Reserved.</p>
     </footer>
-  </div> <!-- end container div -->
+  </div> 
 </body>
 </html>
